# azure-enterprise-security-intelligence-platform

./: .env.example  .gitignore  LOCAL_DEMO.md  PORTFOLIO_SUMMARY.md  PROJECT_WALKTHROUGH.md  README.md  pyproject.toml
configs/: compliance_controls.yaml  detection_rules.yaml  platform.yaml
dashboards/: README.md  dashboard_summary.json  streamlit_app.py
diagrams/: azure_architecture.mmd  data_flow.mmd  security_operations_flow.mmd
docs/: architecture.md  azure_mapping.md  cli_reference.md  limitations_and_future_work.md  milestone_plan.md  output_catalog.md  production_architecture.md  security_operations_model.md  testing_strategy.md
github-cleanup-audit/: all-forks-audit.md  forks-to-delete.csv  forks-to-keep.csv  forks-to-review.csv  likely-safe-to-delete.csv  needs-manual-browser-check.csv  possible-learning-value.csv  possible-portfolio-or-contribution-value.csv  second-stage-review.md
infra/: README.md  azure_architecture.md  cost_considerations.md  deployment_plan.md  environments.md  security_controls.md
scripts/: run_all_local.sh
tests/: test_architecture_docs.py  test_cli.py  test_cli_reference_docs.py  test_config.py  test_copilot_cli.py  test_copilot_context.py  test_copilot_engine.py  test_copilot_generator.py  test_copilot_support.py  test_dashboard_cli.py  test_dashboard_exporter.py  test_dashboard_metrics.py  test_dashboard_support.py  test_detection_cli.py  test_detection_engine.py  test_detection_rules.py  test_identity_checks.py  test_identity_cli.py  test_identity_engine.py  test_ingestion_cli.py  test_ingestion_pipeline.py  (+13 more)
(+432 files in other folders)
